# SHUT_THE_BUG_UP

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  install_dependencies.sh
inc/srb/: cheema.hpp  decompressor.hpp  string_constants.hpp
src/: main.cpp
src/srb/: cheema.cpp  decompressor.cpp
test/compressed_files/: hello.cpp.bz2
